--- a/manifest.json
+++ b/manifest.json
@@ -35,6 +35,6 @@
     ],
     "start_url": "index.html",
     "display": "fullscreen",
-    "theme_color": "#fff",
-    "background_color": "#fff"
+    "theme_color": "#f6f6f6",
+    "background_color": "#f6f6f6"
   }
